# shell

bash/: CMakeLists.txt  CommandCompleter.cpp  CommandCompleter.h  alias.cpp  alias.h  configs.cpp  configs.h  execute.cpp  execute.h  highlighter.cpp  highlighter.h  history.cpp  history.h  parser.cpp  parser.h  pipeline.cpp  pipeline.h  prompt.cpp  prompt.h  read.cpp  read.h  repl.cpp  repl.h  shell.cpp
bash/builtins/: alias_and_unalias_command.h  builtins.cpp  builtins.h  cd_command.h  echo_command.h  history_command.h
bash/utils/: file.cpp  file.h  string_dealing.cpp  string_dealing.h
